Fix URLs in config.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,9 @@ run-name: Deploy to GitHub Pages
 on:
   push:
     branches: ["main"]
+  pull_request_target:
+    types:
+      - closed
 
 concurrency:
   group: "pages"
@@ -14,6 +17,7 @@ permissions:
 
 jobs:
   deploy:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request_target' && github.event.pull_request.merged == true)
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
