--- a/config.yml
+++ b/config.yml
@@ -74,6 +74,13 @@ params:
     theme_color: "#1D1E20"
     msapplication_TileColor: "#1D1E20"
 
+markup:
+  highlight:
+    codeFences: true
+    guessSyntax: true
+    lineNos: true
+    style: monokai
+
 menu:
   main:
   - name: "Profile"
@@ -102,5 +109,5 @@ languages:
         enabled: true
         title: "Dimitris Chatzis"
         subtitle: "Student of [Digital Systems](https://ds.uth.gr/en) in [University of Thessaly](https://www.uth.gr/en), programmer and hacking enthusiast. Bug Bounty Hunter at HackerOne, Bugcrowd and Intigriti."
-        imageUrl: "/assets/images/profile"
+        imageUrl: "/images/profile"
         imageTitle: "Dimitris Chatzis"
