--- a/config.yml
+++ b/config.yml
@@ -13,7 +13,7 @@ googleAnalytics: "G-LVC4CS3028"
 #   disableXML: true
 #   minifyOutput: true
 disableHugoGeneratorInject: true
-disableKinds: ["taxonomy", "taxonomyTerm"]
+disableKinds: ["taxonomy"]
 
 params:
   env: "production"
@@ -42,7 +42,7 @@ params:
   socialIcons:
     - name: "LinkedIn"
       url: "https://linkedin.com/in/dimitris-chatzis"
-    - name: "Twitter"
+    - name: "X"
       url: "https://twitter.com/dhtzs"
     - name: "GitHub"
       url: "https://github.com/dhtzs"
@@ -55,7 +55,7 @@ params:
     - name: "Intigriti"
       url: "https://intigriti.com/profile/dhtzs"
     - name: "Email"
-      url: "bWFpbHRvOmRodHpzMjAwMUBob3RtYWlsLmNvbQ=="
+      url: "#"
   schema:
     sameAs:
       - "https://linkedin.com/in/dimitris-chatzis"
