--- a/config.yml
+++ b/config.yml
@@ -106,11 +106,12 @@ outputs:
 
 languages:
   en:
-    languageName: "English"
-    weight: 1
-    profileMode:
-      enabled: true
-      title: "Dimitris Chatzis"
-      subtitle: "Student of [Digital Systems](https://ds.uth.gr/en) in [University of Thessaly](https://www.uth.gr/en), programmer and hacking enthusiast. Bug Bounty Hunter at HackerOne, Bugcrowd and Intigriti."
-      imageUrl: "/images/profile"
-      imageTitle: "Dimitris Chatzis"
+    params:
+      languageName: "English"
+      weight: 1
+      profileMode:
+        enabled: true
+        title: "Dimitris Chatzis"
+        subtitle: "Student of [Digital Systems](https://ds.uth.gr/en) in [University of Thessaly](https://www.uth.gr/en), programmer and hacking enthusiast. Bug Bounty Hunter at HackerOne, Bugcrowd and Intigriti."
+        imageUrl: "/images/profile"
+        imageTitle: "Dimitris Chatzis"
