Add search functionality

--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,7 @@ baseURL: https://dhtzs.dev/
 languageCode: en-us
 title: "dhtzs.dev"
 theme: PaperMod
+paginate: 5
 
 enableRobotsTXT: true
 buildDrafts: true
