--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "cssnano": "^6.0.3",
+    "cssnano-preset-advanced": "^6.0.3",
+    "cssnano-preset-default": "^6.0.3",
+    "cssnano-preset-lite": "^3.0.1",
     "postcss": "^8.4.33",
     "postcss-cli": "^11.0.0"
   }
