--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
+    "@tailwindcss/cli": "^4.0.0-beta.3",
+    "autoprefixer": "^10.4.20",
     "cssnano": "^6.1.2",
     "cssnano-preset-advanced": "^6.1.2",
     "cssnano-preset-default": "^6.1.2",
     "cssnano-preset-lite": "^3.1.0",
-    "postcss": "^8.4.39",
-    "postcss-cli": "^11.0.0"
+    "postcss": "^8.4.49",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^4.0.0-beta.3"
   },
   "scripts": {
-    "update-deps": "npm install autoprefixer cssnano cssnano-preset-advanced cssnano-preset-default cssnano-preset-lite postcss postcss-cli --save-dev"
+    "update-deps": "npm install @tailwindcss/cli autoprefixer cssnano cssnano-preset-advanced cssnano-preset-default cssnano-preset-lite postcss postcss-cli tailwindcss --save-dev"
   }
 }
