--- a/hugo.yml
+++ b/hugo.yml
@@ -16,8 +16,7 @@ buildExpired: false
 pluralizeListTitles: false
 pygmentsUseClasses: true
 sitemap:
-  changefreq: "monthly"
-  filename: "sitemap.xml"
+  changefreq: "weekly"
 
 services:
   googleAnalytics:
@@ -47,7 +46,7 @@ params:
   images: ["images/logo.png"]
   defaultTheme: auto
   DateFormat: "October 30, 2001"
-  ShareButtons: ["x", "linkedin", "reddit", "telegram"]
+  ShareButtons: ["x", "linkedin", "telegram"]
   ShowShareButtons: true
   ShowReadingTime: true
   ShowCodeCopyButtons: true
@@ -69,25 +68,23 @@ params:
   hideSummary: false
   socialIcons:
     - name: "LinkedIn"
-      url: "https://linkedin.com/in/dimitris-chatzis"
+      url: "/profile/linkedin"
     - name: "X"
-      url: "https://twitter.com/dhtzs"
+      url: "/profile/x"
     - name: "GitHub"
-      url: "https://github.com/dhtzs"
+      url: "/profile/github"
     - name: "HackerOne"
-      url: "https://hackerone.com/dhtzs"
+      url: "/profile/hackerone"
     - name: "Bugcrowd"
-      url: "https://bugcrowd.com/dhtzs"
+      url: "/profile/bugcrowd"
     - name: "Intigriti"
-      url: "https://intigriti.com/profile/dhtzs"
+      url: "/profile/intigriti"
     - name: "PGPKey"
-      url: "/pgp-key.txt"
-    - name: "Email"
-      url: "#"
+      url: "/pubkey.asc"
   schema:
     sameAs:
       - "https://linkedin.com/in/dimitris-chatzis"
-      - "https://twitter.com/dhtzs"
+      - "https://x.com/dhtzs"
       - "https://github.com/dhtzs"
       - "https://hackerone.com/dhtzs"
       - "https://bugcrowd.com/dhtzs"
@@ -128,6 +125,9 @@ markup:
     lineNos: true
     noClasses: false
     tabWidth: 4
+  goldmark:
+    renderer:
+      unsafe: true
 
 menu:
   main:
@@ -140,6 +140,9 @@ menu:
     - name: "/write-ups"
       url: "/write-ups/"
       weight: 3
+    - name: "/contact-me"
+      url: "/contact-me/"
+      weight: 4
 
 outputs:
   home:
