--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "devDependencies": {
-    "@tailwindcss/cli": "^4.0.0-beta.3",
-    "autoprefixer": "^10.4.20",
-    "cssnano": "^6.1.2",
-    "cssnano-preset-advanced": "^6.1.2",
-    "cssnano-preset-default": "^6.1.2",
-    "cssnano-preset-lite": "^3.1.0",
-    "postcss": "^8.4.49",
+    "@eslint/css": "^0.2.0",
+    "@eslint/js": "^9.21.0",
+    "@tailwindcss/postcss": "^4.0.8",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-html": "^8.1.2",
+    "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^4.0.0-beta.3"
+    "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.8"
   },
   "scripts": {
-    "update-deps": "npm install @tailwindcss/cli autoprefixer cssnano cssnano-preset-advanced cssnano-preset-default cssnano-preset-lite postcss postcss-cli tailwindcss --save-dev"
+    "build": "node scripts/build.js",
+    "server": "node scripts/server.js",
+    "update": "node scripts/update.js"
   }
 }
