--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,13 +1,14 @@
 {
   "name": "dhtzs-dev",
-  "compatibility_date":"2025-09-15",
+  "compatibility_date":"2025-11-17",
   "assets": {
     "directory": "./public/",
     "not_found_handling": "404-page"
   },
-  "main": "./worker.js",
+  "main": "./index.js",
   "workers_dev": false,
   "placement": {
     "mode": "smart"
-  }
+  },
+  "send_metrics": false
 }
